file -> kafka